# QtVolRender

./: CMakeLists.txt  VizWidget.pro  glwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scatterplotviz.cpp
src/: CMakeLists.txt  glwidget.h  mainwindow.cpp  mainwindow.h  scatterplotviz.cpp  scatterplotviz.h
